clang/test/BSC/Negative/borrow_owned_mixed.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test cases for structs with both _Borrow and _Owned fields
// Rule: _Borrow fields MUST be initialized, _Owned fields CAN be uninitialized

struct BorrowAndOwned {
    int *_Borrow b;
    int *_Owned o;
};

void test_basic_mixed() {
    int x = 0;

    struct BorrowAndOwned m1;

    struct BorrowAndOwned m2 = {};

    struct BorrowAndOwned m3 = {.o = nullptr};

    // OK: _Borrow initialized, _Owned can be uninitialized
    struct BorrowAndOwned m4 = {.b = &_Mut x};

    // OK: both initialized
    struct BorrowAndOwned m5 = {.b = &_Mut x, .o = nullptr};

    // OK: positional
    struct BorrowAndOwned m6 = {&_Mut x, nullptr};
}

struct MultipleMixed {
    int *_Borrow b1;
    int *_Owned o1;
    int *_Borrow b2;
    int *_Owned o2;
};

void test_multiple_mixed() {
    int x = 0, y = 0;

    struct MultipleMixed m1;

    struct MultipleMixed m2 = {.b1 = &_Mut x};

    struct MultipleMixed m3 = {.b1 = &_Mut x, .o1 = nullptr};

    struct MultipleMixed m4 = {.o1 = nullptr, .o2 = nullptr};

    // OK: all _Borrow initialized, _Owned can be left out
    struct MultipleMixed m5 = {.b1 = &_Mut x, .b2 = &_Mut y};

    // OK: all initialized
    struct MultipleMixed m6 = {.b1 = &_Mut x, .o1 = nullptr, .b2 = &_Mut y, .o2 = nullptr};
}

struct InnerMixed {
    int *_Borrow b;
    int *_Owned o;
};

struct OuterMixed {
    int a;
    struct InnerMixed inner;
    int *_Owned outer_o;
};

void test_nested_mixed() {
    int x = 0;

    struct OuterMixed o1;

    struct OuterMixed o2 = {.a = 1};

    struct OuterMixed o3 = {.a = 1, .outer_o = nullptr};

    struct OuterMixed o4 = {.a = 1, .inner = {.o = nullptr}};

    // OK: _Borrow initialized, _Owned fields can be omitted
    struct OuterMixed o5 = {.a = 1, .inner = {.b = &_Mut x}};

    // OK: all initialized
    struct OuterMixed o6 = {.a = 1, .inner = {.b = &_Mut x, .o = nullptr}, .outer_o = nullptr};

    // OK: positional
    struct OuterMixed o7 = {1, {&_Mut x, nullptr}, nullptr};
} // expected-error {{field memory leak of value: `o3`, o3.inner.o is leak}}
  // expected-error@-1 {{field memory leak of value: `o2`, o2.inner.o is leak}}

struct Level3Mixed {
    int *_Borrow b;
    int *_Owned o;
};

struct Level2Mixed {
    int *_Owned o;
    struct Level3Mixed l3;
};

struct Level1Mixed {
    int *_Borrow b;
    struct Level2Mixed l2;
};

void test_deep_mixed() {
    int x = 0, y = 0;

    struct Level1Mixed v1;

    struct Level1Mixed v2 = {.b = &_Mut x};

    struct Level1Mixed v3 = {.b = &_Mut x, .l2 = {.o = nullptr}};

    struct Level1Mixed v4 = {.l2 = {.l3 = {.b = &_Mut y}}};

    // OK: all _Borrow fields initialized
    struct Level1Mixed v5 = {.b = &_Mut x, .l2 = {.l3 = {.b = &_Mut y}}};

    // OK: all fields initialized
    struct Level1Mixed v6 = {.b = &_Mut x, .l2 = {.o = nullptr, .l3 = {.b = &_Mut y, .o = nullptr}}};
} // expected-error {{field memory leak of value: `v3`, v3.l2.l3.o is leak}}
  // expected-error@-1 {{field memory leak of value: `v2`, v2.l2.o, v2.l2.l3.o are leak}}

struct Interleaved {
    int *_Owned o1;
    int *_Borrow b1;
    int regular;
    int *_Owned o2;
    int *_Borrow b2;
    int *_Owned o3;
};

void test_interleaved() {
    int x = 0, y = 0;

    struct Interleaved i1;

    struct Interleaved i2 = {.o1 = nullptr, .regular = 0};

    struct Interleaved i3 = {.b1 = &_Mut x};

    // OK: all _Borrow initialized, _Owned can be omitted
    struct Interleaved i4 = {.b1 = &_Mut x, .b2 = &_Mut y};

    // OK: all initialized
    struct Interleaved i5 = {.o1 = nullptr, .b1 = &_Mut x, .regular = 0,
                              .o2 = nullptr, .b2 = &_Mut y, .o3 = nullptr};

    // OK: positional
    struct Interleaved i6 = {nullptr, &_Mut x, 0, nullptr, &_Mut y, nullptr};
}

struct ConstBorrowOwned {
    const int *_Borrow cb;
    int *_Borrow b;
    int *_Owned o;
};

void test_const_borrow_owned() {
    int x = 0, y = 0;

    struct ConstBorrowOwned c1;

    struct ConstBorrowOwned c2 = {.cb = &_Const x};

    struct ConstBorrowOwned c3 = {.b = &_Mut y};

    // OK: both _Borrow initialized
    struct ConstBorrowOwned c4 = {.cb = &_Const x, .b = &_Mut y};

    // OK: all initialized
    struct ConstBorrowOwned c5 = {.cb = &_Const x, .b = &_Mut y, .o = nullptr};
}

struct Node {
    int *_Owned data;
    int *_Borrow parent;
    struct {
        int *_Borrow left;
        int *_Borrow right;
    } children;
};

void test_tree_node() {
    int p = 0, l = 0, r = 0;

    struct Node n1;

    struct Node n2 = {.data = nullptr};

    struct Node n3 = {.parent = &_Mut p};

    struct Node n4 = {.parent = &_Mut p, .children = {.left = &_Mut l}};

    // OK: all _Borrow initialized
    struct Node n5 = {.parent = &_Mut p, .children = {.left = &_Mut l, .right = &_Mut r}};

    // OK: with _Owned field too
    struct Node n6 = {.data = nullptr, .parent = &_Mut p,
                      .children = {.left = &_Mut l, .right = &_Mut r}};
}

// _Owned is implicitly _Nonnull. In _Safe zones, assigning nullptr to an
// _Owned field without _Nullable triggers a nullability error.
// Outside _Safe zones (like all tests above), no such check is enforced.
struct OwnedField { int *_Owned o; int v; };

_Safe void test_owned_nonnull_in_safe(void) {
    struct OwnedField s = {.o = nullptr, .v = 1}; // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
}
